--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.26",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuesax": "^3.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
