--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.26",
     "core-js": "^2.6.5",
+    "material-icons": "^0.3.1",
     "vue": "^2.6.10",
     "vuesax": "^3.9.0"
   },
