--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^2.6.5",
     "material-icons": "^0.3.1",
     "vue": "^2.6.10",
+    "vue-component-tree": "^3.0.2",
+    "vue-router": "^3.0.7",
     "vuesax": "^3.9.0"
   },
   "devDependencies": {
